<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background2">

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/ib_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/ib_earth"
        android:src="@drawable/ib_states"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv1_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ib_earth"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/ib_earth"
        android:text="@string/planet_name_earth"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv2_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_earth"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginBottom="-60dp"
        android:layout_above="@+id/tv1_earth"
        android:layout_alignLeft="@+id/tv1_earth"/>

    <TextView
        android:id="@+id/tv3_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_grav_earth"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_below="@+id/tv1_earth"
        android:layout_alignLeft="@+id/tv1_earth"/>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/ib_venus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ib_earth"
        android:background="#00000000"
        android:contentDescription="@string/ib_venus"
        android:src="@drawable/ib2_states"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv1_venus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ib_venus"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/ib_venus"
        android:text="@string/planet_name_venus"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv2_venus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_venus"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginBottom="-60dp"
        android:layout_above="@+id/tv1_venus"
        android:layout_alignLeft="@+id/tv1_venus"/>

    <TextView
        android:id="@+id/tv3_venus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_grav_venus"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_below="@+id/tv1_venus"
        android:layout_alignLeft="@+id/tv1_venus"/>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/ib_jupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ib_venus"
        android:background="#00000000"
        android:contentDescription="@string/ib_jupiter"
        android:src="@drawable/ib3_states"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv1_jupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ib_jupiter"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/ib_jupiter"
        android:text="@string/planet_name_jupiter"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv2_jupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_jupiter"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginBottom="-60dp"
        android:layout_above="@+id/tv1_jupiter"
        android:layout_alignLeft="@+id/tv1_jupiter"/>

    <TextView
        android:id="@+id/tv3_jupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_grav_jupiter"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_below="@+id/tv1_jupiter"
        android:layout_alignLeft="@+id/tv1_jupiter" />

</RelativeLayout>